sorted/tests/17-pattern-byte-literal.stderr
error: b'a' should sort before b'd'
 --> tests/17-pattern-byte-literal.rs:8:9
  |
8 |         b'a' => println!("a"),
  |         ^^^^
